--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,15 +29,26 @@ jobs:
         tag_name: ${{ steps.release-info.outputs.tag_name }}
         body_path: ${{ steps.release-info.outputs.body_path }}
         files: 'dist/*'
-    - uses: petronny/git-config-user@master
+    
+    - name: config git
+      uses: petronny/git-config-user@master
       with:
         path: .
-    - name: Push dist files
+      
+    - name: gen Readme.md    
       run: |
         set -x
-        sed -i 's#__REPO__#${{ github.repository }}#g' README.md # 当别人fork后，README 信息自动变更到他自己的仓库
+        sed -i 's#__REPO__#${{ github.repository }}#g' README-TEMPLATE.md # 当别人fork后，README 信息自动变更到他自己的仓库
+        mv -f README-TEMPLATE.md README.md
+
+    - name: remove Time in txt
+      run: |
         sed -i '/Time:/d' dist/*.txt  # 剔除日期变更，忽略仅仅因为日期变更而出现的提交
-        git add -f -A dist/*.txt README.md
+        
+    - name: add commit push    
+      run: |
+        # git add -f -A dist/*.txt 
+        git add -f -A README.md
         git commit -m "[$(LANG=C date)] auto update" || exit 0
         [ -n "${{ secrets.READ_ONLY }}" ] && git show && exit 0
         git push origin master
